--- a/client/views/partials/inventories/inventoriesList.html
+++ b/client/views/partials/inventories/inventoriesList.html
@@ -61,6 +61,9 @@
                     </a>
                 </td>
             </tr>
+            <tr ng-if="!inventories || inventories.length === 0">
+                <td colspan="10">No Records exist.</td>
+            </tr>
         </table>
     </div>
     <div class="clearfix"></div>
