remove user name from groups list

--- a/client/views/partials/userProfile/myGroup.html
+++ b/client/views/partials/userProfile/myGroup.html
@@ -13,9 +13,9 @@
                     <table class="table table-bordered table-striped table-condensed table-hover mt-20" ng-table="accountGroupParams">
                         <tr ng-repeat="groups in currentPageOfAccountGroup" style="text-align: center;">
 
-                            <td data-title="'User Name'" sortable="'userName'" class="clickable-item col-sm-2">{{
+                           <!--  <td data-title="'User Name'" sortable="'userName'" class="clickable-item col-sm-2">{{
                                 groups.userName}}
-                            </td>
+                            </td> -->
                             <td data-title="'Group Name'" sortable="'groupName'" class="clickable-item col-sm-2">{{
                                 groups.groupName }}
                             </td>
