--- a/client/views/partials/receipts/receiptReceived.html
+++ b/client/views/partials/receipts/receiptReceived.html
@@ -11,15 +11,15 @@
                              placeholder="'to date'" ></date-picker>
             </li>
             <li class="col-sm-1 pall-zero">
-                <button type="submit" ng-click="searchByPartyName(partyName1);" class="btn go">
+                <button type="submit" ng-click="getCount();" class="btn go">
                     <i class="fa fa-search sear" aria-hidden="true"></i>
                 </button>
             </li>
             <li class="col-sm-2 pall-zero">
                 <div class="select-box erp-box">
-                    <ui-select ng-model="partyName" theme="select2"
+                    <ui-select ng-model="party.party" theme="select2"
                                title="Choose a person" append-to-body="true"
-                               ng-change="searchByPartyName(partyName.name);">
+                               ng-change="getCount();">
                         <ui-select-match placeholder="Select a Party" class="form-control ui-select-control">
                             {{$select.selected.name || name}}
                         </ui-select-match>
