--- a/client/views/partials/party/party-list.html
+++ b/client/views/partials/party/party-list.html
@@ -8,7 +8,7 @@
                         <input type="text" ng-model="partyName1" class="form-control"
                                placeholder="Search By Party Name">
                         <span class="input-group-addon">
-                        <button type="submit" ng-click="searchByPartyName(partyName1);">
+                        <button type="submit" ng-click="getCount();">
                               <i class="fa fa-search sear" aria-hidden="true"></i>
                         </button>
                     </span>
@@ -17,8 +17,8 @@
             </li>
             <li class="col-sm-4 pos-relative">
                 <div class="select-box erp-box">
-                    <ui-select ng-model="partyName" theme="select2"
-                               title="Choose a person" append-to-body="true" ng-change="searchByPartyName(partyName.name);">
+                    <ui-select ng-model="partyName.party" theme="select2"
+                               title="Choose a person" append-to-body="true" ng-change="getCount();">
                         <ui-select-match placeholder="Select a Party" class="form-control ui-select-control">
                             {{$select.selected.name || name}}
                         </ui-select-match>
