--- a/client/views/partials/party/party-list.html
+++ b/client/views/partials/party/party-list.html
@@ -5,7 +5,7 @@
             <li class="col-sm-6">
                 <form>
                     <div class="input-group stylish-input-group">
-                        <input type="text" ng-model="partyName1" class="form-control"
+                        <input type="text" ng-model="partyName.name" class="form-control"
                                placeholder="Search By Party Name">
                         <span class="input-group-addon">
                         <button type="submit" ng-click="getCount();">
