--- a/client/views/partials/geoFences/add_editgeoFence.html
+++ b/client/views/partials/geoFences/add_editgeoFence.html
@@ -10,6 +10,12 @@
             </div>
             <div class="form-group col-xs-12">
                 <div class="styling-input-list">
+                    <input ng-model="geoFence.geoRadius" type="text" class="form-control custom-form-control">
+                    <label class="focus-effect-for-input" aria-hidden="true">Geo Radius in meters</label>
+                </div>
+            </div>
+            <div class="form-group col-xs-12">
+                <div class="styling-input-list">
                     <input  type="text" class="form-control custom-form-control" placeholder="geoLocation*"
                          id="source"  ng-model="geoFence.address" ng-change="searchSource()">
                     <!--<label class="focus-effect-for-input" aria-hidden="true"></label>-->
