--- a/client/views/partials/party/edit-party.html
+++ b/client/views/partials/party/edit-party.html
@@ -21,6 +21,16 @@
                 </div>
                 <div class="form-group col-xs-12">
                     <div class="styling-input-list">
+                        <input ng-model="party.gstNo" type="text" class="form-control custom-form-control" id="gstNo"
+                              >
+                        <label class="focus-effect-for-input" aria-hidden="true">GST No</label>
+
+                    </div>
+                </div>
+            </div>
+            <div class="col-xs-12 col-sm-6">
+                <div class="form-group col-xs-12">
+                    <div class="styling-input-list">
                         <input ng-model="party.email" type="email" class="form-control custom-form-control"
                                id="contactEmail">
                         <label class="focus-effect-for-input" aria-hidden="true">Email</label>
@@ -32,14 +42,6 @@
                         <input ng-model="party.city" type="text" class="form-control custom-form-control" id="city"
                                ng-change="searchCity()">
                         <label class="focus-effect-for-input" aria-hidden="true">City</label>
-
-                    </div>
-                </div>
-                <div class="form-group col-xs-12">
-                    <div class="styling-input-list">
-                        <input ng-model="party.gstNo" type="text" class="form-control custom-form-control" id="gstNo"
-                              >
-                        <label class="focus-effect-for-input" aria-hidden="true">GST No</label>
 
                     </div>
                 </div>
@@ -80,8 +82,7 @@
                         </div>
                     </div>
                 </div>
-            </div>
-            <div class="col-xs-12 col-xs-6" ng-show="party.partyType == 'Load Owner'">
+            <div ng-show="party.partyType == 'Load Owner'">
                 <div class="col-xs-12 pall-zero">
                     <div class="form-group sms-email col-xs-12">
                         <div class="sms col-xs-6">
@@ -107,11 +108,9 @@
                             </div>
                         </div>
                     </div>
-
                 </div>
                 <form class="mt-10">
                     <div class="col-xs-12" ng-repeat="tripLane in party.tripLanes track by $index">
-
                         <div class="mb-0 ">
                             <div class="col-xs-10 form-group pl4-pr0 styling-input-list">
                                 <input ng-model="tripLane.name" type="text" class="form-control custom-form-control"
@@ -140,11 +139,11 @@
                             <div class="clearfix"></div>
                         </div>
                     </div>
-
                 </form>
                 <div class="toolbar-button-div pull-right mb-10">
                     <button class="btn add-group mt-20" ng-click="addTripLane();">Add Trip Lanes</button>
                 </div>
+            </div>
             </div>
             <div class="clearfix"></div>
             <div class="col-xs-6 col-xs-push-3">
