Geo fence module is fixed

--- a/client/views/partials/geoFences/add_editgeoFence.html
+++ b/client/views/partials/geoFences/add_editgeoFence.html
@@ -10,7 +10,7 @@
             </div>
             <div class="form-group col-xs-12">
                 <div class="styling-input-list">
-                    <input ng-model="geoFence.geoRadius" type="text" class="form-control custom-form-control">
+                    <input ng-model="geoFence.geoRadius" type="number" class="form-control custom-form-control">
                     <label class="focus-effect-for-input" aria-hidden="true">Geo Radius in meters</label>
                 </div>
             </div>
