Change the geo fence report reference

--- a/client/views/partials/geoFences/GeoFencesReports.html
+++ b/client/views/partials/geoFences/GeoFencesReports.html
@@ -48,10 +48,10 @@
                 gfr.depot }}
             </td>
             <td data-title="'Start time'" sortable="'startTime'" class="clickable-item">{{
-                gfr.startTime | date : 'medium' || '--'}}
+                gfr.start | date : 'medium' || '--'}}
             </td>
             <td data-title="'End Time'" sortable="'endTime'" class="clickable-item">{{
-                gfr.endTime |  date : 'medium' || '--'}}
+                gfr.end |  date : 'medium' || '--'}}
             </td>
 
 
