--- a/client/views/partials/userProfile/myProfile.html
+++ b/client/views/partials/userProfile/myProfile.html
@@ -175,6 +175,15 @@
                                     <div class="clearfix"></div>
                                 </div>
                             </div>
+                            <div class="form-group form-group-custom">
+                                <div class="styling-input-list">
+                                    <input type="text" name="totalVehicles"
+                                           ng-model="account.profile.templatePath"
+                                           class="form-control custom-form-control"/>
+                                    <label class="focus-effect-for-input" aria-hidden="true">Template Path</label>
+                                    <div class="clearfix"></div>
+                                </div>
+                            </div>
 
                             <div class="clearfix"></div>
                         </div>
