--- a/client/views/index.html
+++ b/client/views/index.html
@@ -152,6 +152,7 @@
                                                  <left-menu label="Receipts" ui-sref="receipts"></left-menu>
                                                 <left-menu label="Payments" ui-sref="payments"></left-menu>
                                             <left-menu label="LR" ui-sref="lrs"></left-menu>
+                                                 <left-menu label="TripSettlement" ui-sref="tripSettlement"></left-menu>
                                             </div>
                                         </div>
                                     </div>
