Fix GeoFence reports

--- a/client/views/partials/geoFences/GeoFencesReports.html
+++ b/client/views/partials/geoFences/GeoFencesReports.html
@@ -42,10 +42,10 @@
             <td data-title="'Geo Fence Name'" sortable="'depot'" class="clickable-item">{{
                 gfr.depot }}
             </td>
-            <td data-title="'Start time'" sortable="'startTime'" class="clickable-item">{{
+            <td data-title="'Start time'" sortable="'start'" class="clickable-item">{{
                 gfr.start | date : 'medium' || '--'}}
             </td>
-            <td data-title="'End Time'" sortable="'endTime'" class="clickable-item">{{
+            <td data-title="'End Time'" sortable="'end'" class="clickable-item">{{
                 gfr.end |  date : 'medium' || '--'}}
             </td>
 
