--- a/client/views/partials/admin/services/gpsDevices.html
+++ b/client/views/partials/admin/services/gpsDevices.html
@@ -32,8 +32,8 @@
             <form role="search">
                 <div class="input-group add-on">
                     <input type="text" class="form-control" placeholder="Search by accountName" name="srch-term"
-                           ng-model="searchAccount">
-                    <div class="input-group-btn" ng-click="init();">
+                           ng-model="query.searchAccount">
+                    <div class="input-group-btn" ng-click="getCount();">
                         <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i>
                         </button>
                     </div>
